dist_man1_MANS=

if BUILD_PALLADIUMD
  dist_man1_MANS+=blockled.1
endif

if ENABLE_QT
  dist_man1_MANS+=blockle-qt.1
endif

if BUILD_PALLADIUM_CLI
  dist_man1_MANS+=blockle-cli.1
endif

if BUILD_PALLADIUM_TX
  dist_man1_MANS+=blockle-tx.1
endif

if ENABLE_WALLET
if BUILD_PALLADIUM_WALLET
  dist_man1_MANS+=blockle-wallet.1
endif
endif
